// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`extract fixtures > 'component-whitespacing' > astro extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "_txFeF",
    "message": "Before {value} After",
    "origin": [
      "/virtual/component-whitespacing.astro",
      5,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "DFZbAv",
    "message": "Before{value}After",
    "origin": [
      "/virtual/component-whitespacing.astro",
      10,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "_txFeF",
    "message": "Before {value} After",
    "origin": [
      "/virtual/component-whitespacing.astro",
      15,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "INRnBm",
    "message": " Before  {value}  After ",
    "origin": [
      "/virtual/component-whitespacing.astro",
      18,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
]
`;

exports[`extract fixtures > 'component-whitespacing' > official react extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "_txFeF",
    "message": "Before {value} After",
    "origin": [
      "/virtual/component-whitespacing.reference.tsx",
      6,
      4,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "DFZbAv",
    "message": "Before{value}After",
    "origin": [
      "/virtual/component-whitespacing.reference.tsx",
      15,
      4,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "_txFeF",
    "message": "Before {value} After",
    "origin": [
      "/virtual/component-whitespacing.reference.tsx",
      24,
      4,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "INRnBm",
    "message": " Before  {value}  After ",
    "origin": [
      "/virtual/component-whitespacing.reference.tsx",
      33,
      4,
    ],
    "placeholders": {
      "value": "value",
    },
  },
]
`;

exports[`extract fixtures > 'component-whitespacing' > svelte extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "_txFeF",
    "message": "Before {value} After",
    "origin": [
      "/virtual/component-whitespacing.svelte",
      5,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "DFZbAv",
    "message": "Before{value}After",
    "origin": [
      "/virtual/component-whitespacing.svelte",
      10,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "_txFeF",
    "message": "Before {value} After",
    "origin": [
      "/virtual/component-whitespacing.svelte",
      15,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "INRnBm",
    "message": " Before  {value}  After ",
    "origin": [
      "/virtual/component-whitespacing.svelte",
      18,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
]
`;

exports[`extract fixtures > 'component-whitespacing-auto' > astro extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "_txFeF",
    "message": "Before {value} After",
    "origin": [
      "/virtual/component-whitespacing-auto.astro",
      5,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "_txFeF",
    "message": "Before {value} After",
    "origin": [
      "/virtual/component-whitespacing-auto.astro",
      10,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "_txFeF",
    "message": "Before {value} After",
    "origin": [
      "/virtual/component-whitespacing-auto.astro",
      15,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "INRnBm",
    "message": " Before  {value}  After ",
    "origin": [
      "/virtual/component-whitespacing-auto.astro",
      18,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
]
`;

exports[`extract fixtures > 'component-whitespacing-auto' > official react extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "_txFeF",
    "message": "Before {value} After",
    "origin": [
      "/virtual/component-whitespacing-auto.reference.tsx",
      6,
      4,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "_txFeF",
    "message": "Before {value} After",
    "origin": [
      "/virtual/component-whitespacing-auto.reference.tsx",
      15,
      4,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "_txFeF",
    "message": "Before {value} After",
    "origin": [
      "/virtual/component-whitespacing-auto.reference.tsx",
      24,
      4,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "INRnBm",
    "message": " Before  {value}  After ",
    "origin": [
      "/virtual/component-whitespacing-auto.reference.tsx",
      33,
      4,
    ],
    "placeholders": {
      "value": "value",
    },
  },
]
`;

exports[`extract fixtures > 'component-whitespacing-auto' > svelte extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "_txFeF",
    "message": "Before {value} After",
    "origin": [
      "/virtual/component-whitespacing-auto.svelte",
      5,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "_txFeF",
    "message": "Before {value} After",
    "origin": [
      "/virtual/component-whitespacing-auto.svelte",
      10,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "_txFeF",
    "message": "Before {value} After",
    "origin": [
      "/virtual/component-whitespacing-auto.svelte",
      15,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "INRnBm",
    "message": " Before  {value}  After ",
    "origin": [
      "/virtual/component-whitespacing-auto.svelte",
      18,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
]
`;

exports[`extract fixtures > 'deep-rich-text-trans' > astro extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "zt7J-8",
    "message": "Read <0><1>{name}</1></0> before opening <2>{count}</2> tabs to {action}.",
    "origin": [
      "/virtual/deep-rich-text-trans.astro",
      9,
      0,
    ],
    "placeholders": {
      "action": "action",
      "count": "count",
      "name": "name",
    },
  },
]
`;

exports[`extract fixtures > 'deep-rich-text-trans' > official react extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "zt7J-8",
    "message": "Read <0><1>{name}</1></0> before opening <2>{count}</2> tabs to {action}.",
    "origin": [
      "/virtual/deep-rich-text-trans.reference.tsx",
      13,
      2,
    ],
    "placeholders": {
      "action": "action",
      "count": "count",
      "name": "name",
    },
  },
]
`;

exports[`extract fixtures > 'deep-rich-text-trans' > svelte extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "zt7J-8",
    "message": "Read <0><1>{name}</1></0> before opening <2>{count}</2> tabs to {action}.",
    "origin": [
      "/virtual/deep-rich-text-trans.svelte",
      9,
      0,
    ],
    "placeholders": {
      "action": "action",
      "count": "count",
      "name": "name",
    },
  },
]
`;

exports[`extract fixtures > 'exact-number-component' > astro extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "a-Xhin",
    "message": "{count, plural, =0 {no queued builds} =2 {exactly two queued builds} other {# queued builds}}",
    "origin": [
      "/virtual/exact-number-component.astro",
      8,
      0,
    ],
    "placeholders": {
      "count": "count",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "gM41pk",
    "message": "{rank, selectordinal, =1 {take the shortcut} =2 {take the scenic route} other {finish in #th place}}",
    "origin": [
      "/virtual/exact-number-component.astro",
      14,
      0,
    ],
    "placeholders": {
      "rank": "rank",
    },
  },
]
`;

exports[`extract fixtures > 'exact-number-component' > official react extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "a-Xhin",
    "message": "{count, plural, =0 {no queued builds} =2 {exactly two queued builds} other {# queued builds}}",
    "origin": [
      "/virtual/exact-number-component.reference.tsx",
      12,
      4,
    ],
    "placeholders": {
      "count": "count",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "gM41pk",
    "message": "{rank, selectordinal, =1 {take the shortcut} =2 {take the scenic route} other {finish in #th place}}",
    "origin": [
      "/virtual/exact-number-component.reference.tsx",
      21,
      4,
    ],
    "placeholders": {
      "rank": "rank",
    },
  },
]
`;

exports[`extract fixtures > 'exact-number-component' > svelte extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "a-Xhin",
    "message": "{count, plural, =0 {no queued builds} =2 {exactly two queued builds} other {# queued builds}}",
    "origin": [
      "/virtual/exact-number-component.svelte",
      8,
      0,
    ],
    "placeholders": {
      "count": "count",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "gM41pk",
    "message": "{rank, selectordinal, =1 {take the shortcut} =2 {take the scenic route} other {finish in #th place}}",
    "origin": [
      "/virtual/exact-number-component.svelte",
      14,
      0,
    ],
    "placeholders": {
      "rank": "rank",
    },
  },
]
`;

exports[`extract fixtures > 'nested-icu-core' > astro extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "K9g4_G",
    "message": "{count, plural, =0 {{rank, selectordinal, =1 {{role, select, admin {core zero first admin} other {core zero first other}}} other {{role, select, admin {core zero later admin} other {core zero later other}}}}} other {{rank, selectordinal, =1 {{role, select, admin {core many first admin} other {core many first other}}} other {{role, select, admin {core many later admin} other {core many later other}}}}}}",
    "origin": [
      "/virtual/nested-icu-core.astro",
      7,
      19,
    ],
    "placeholders": {
      "count": "count",
      "rank": "rank",
      "role": "role",
    },
  },
]
`;

exports[`extract fixtures > 'nested-icu-core' > official core extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "K9g4_G",
    "message": "{count, plural, =0 {{rank, selectordinal, =1 {{role, select, admin {core zero first admin} other {core zero first other}}} other {{role, select, admin {core zero later admin} other {core zero later other}}}}} other {{rank, selectordinal, =1 {{role, select, admin {core many first admin} other {core many first other}}} other {{role, select, admin {core many later admin} other {core many later other}}}}}}",
    "origin": [
      "/virtual/nested-icu-core.reference.ts",
      4,
      0,
    ],
    "placeholders": {
      "count": "count",
      "rank": "rank",
      "role": "role",
    },
  },
]
`;

exports[`extract fixtures > 'nested-icu-core' > svelte extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "K9g4_G",
    "message": "{count, plural, =0 {{rank, selectordinal, =1 {{role, select, admin {core zero first admin} other {core zero first other}}} other {{role, select, admin {core zero later admin} other {core zero later other}}}}} other {{rank, selectordinal, =1 {{role, select, admin {core many first admin} other {core many first other}}} other {{role, select, admin {core many later admin} other {core many later other}}}}}}",
    "origin": [
      "/virtual/nested-icu-core.svelte",
      8,
      31,
    ],
    "placeholders": {
      "count": "count",
      "rank": "rank",
      "role": "role",
    },
  },
]
`;

exports[`extract fixtures > 'rich-text-trans' > astro extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "9_omjw",
    "message": "Hello <0>{name}</0>.",
    "origin": [
      "/virtual/rich-text-trans.astro",
      7,
      0,
    ],
    "placeholders": {
      "name": "name",
    },
  },
]
`;

exports[`extract fixtures > 'rich-text-trans' > official react extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "9_omjw",
    "message": "Hello <0>{name}</0>.",
    "origin": [
      "/virtual/rich-text-trans.reference.tsx",
      9,
      2,
    ],
    "placeholders": {
      "name": "name",
    },
  },
]
`;

exports[`extract fixtures > 'rich-text-trans' > svelte extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "9_omjw",
    "message": "Hello <0>{name}</0>.",
    "origin": [
      "/virtual/rich-text-trans.svelte",
      7,
      0,
    ],
    "placeholders": {
      "name": "name",
    },
  },
]
`;

exports[`extract fixtures > 'trans-with-deeply-nested-component-icu' > astro extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "Y5Pnrw",
    "message": "Before <0>{count, plural, =0 {{0}} =2 {{1}} other {{2}}}</0> after.",
    "origin": [
      "/virtual/trans-with-deeply-nested-component-icu.astro",
      14,
      0,
    ],
    "placeholders": {
      "0": "_i18n._(
    /*i18n*/
    {
      id: "Ro3jDG",
      message: "{rank, selectordinal, =1 {{role, select, admin {zero first admin} other {zero first other}}} =2 {{role, select, admin {zero second admin} other {zero second other}}} other {{role, select, admin {zero later admin} other {zero later other}}}}",
      values: {
        rank: rank,
        role: role
      }
    })",
      "1": "_i18n._(
    /*i18n*/
    {
      id: "_uwo4-",
      message: "{rank, selectordinal, =1 {{role, select, admin {two first admin} other {two first other}}} =2 {{role, select, admin {two second admin} other {two second other}}} other {{role, select, admin {two later admin} other {two later other}}}}",
      values: {
        rank: rank,
        role: role
      }
    })",
      "2": "_i18n._(
    /*i18n*/
    {
      id: "OsAInm",
      message: "{rank, selectordinal, =1 {{role, select, admin {many first admin} other {many first other}}} =2 {{role, select, admin {many second admin} other {many second other}}} other {{role, select, admin {many later admin} other {many later other}}}}",
      values: {
        rank: rank,
        role: role
      }
    })",
      "count": "count",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "Ro3jDG",
    "message": "{rank, selectordinal, =1 {{role, select, admin {zero first admin} other {zero first other}}} =2 {{role, select, admin {zero second admin} other {zero second other}}} other {{role, select, admin {zero later admin} other {zero later other}}}}",
    "origin": [
      "/virtual/trans-with-deeply-nested-component-icu.astro",
      19,
      10,
    ],
    "placeholders": {
      "rank": "rank",
      "role": "role",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "_uwo4-",
    "message": "{rank, selectordinal, =1 {{role, select, admin {two first admin} other {two first other}}} =2 {{role, select, admin {two second admin} other {two second other}}} other {{role, select, admin {two later admin} other {two later other}}}}",
    "origin": [
      "/virtual/trans-with-deeply-nested-component-icu.astro",
      33,
      10,
    ],
    "placeholders": {
      "rank": "rank",
      "role": "role",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "OsAInm",
    "message": "{rank, selectordinal, =1 {{role, select, admin {many first admin} other {many first other}}} =2 {{role, select, admin {many second admin} other {many second other}}} other {{role, select, admin {many later admin} other {many later other}}}}",
    "origin": [
      "/virtual/trans-with-deeply-nested-component-icu.astro",
      47,
      13,
    ],
    "placeholders": {
      "rank": "rank",
      "role": "role",
    },
  },
]
`;

exports[`extract fixtures > 'trans-with-deeply-nested-component-icu' > official react extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "Y5Pnrw",
    "message": "Before <0>{count, plural, =0 {{0}} =2 {{1}} other {{2}}}</0> after.",
    "origin": [
      "/virtual/trans-with-deeply-nested-component-icu.reference.tsx",
      14,
      2,
    ],
    "placeholders": {
      "0": "_i18n._(
      /*i18n*/
      {
        id: "Ro3jDG",
        message: "{rank, selectordinal, =1 {{role, select, admin {zero first admin} other {zero first other}}} =2 {{role, select, admin {zero second admin} other {zero second other}}} other {{role, select, admin {zero later admin} other {zero later other}}}}",
        values: {
          rank: rank,
          role: role
        }
      })",
      "1": "_i18n._(
      /*i18n*/
      {
        id: "_uwo4-",
        message: "{rank, selectordinal, =1 {{role, select, admin {two first admin} other {two first other}}} =2 {{role, select, admin {two second admin} other {two second other}}} other {{role, select, admin {two later admin} other {two later other}}}}",
        values: {
          rank: rank,
          role: role
        }
      })",
      "2": "_i18n._(
      /*i18n*/
      {
        id: "OsAInm",
        message: "{rank, selectordinal, =1 {{role, select, admin {many first admin} other {many first other}}} =2 {{role, select, admin {many second admin} other {many second other}}} other {{role, select, admin {many later admin} other {many later other}}}}",
        values: {
          rank: rank,
          role: role
        }
      })",
      "count": "count",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "Ro3jDG",
    "message": "{rank, selectordinal, =1 {{role, select, admin {zero first admin} other {zero first other}}} =2 {{role, select, admin {zero second admin} other {zero second other}}} other {{role, select, admin {zero later admin} other {zero later other}}}}",
    "origin": [
      "/virtual/trans-with-deeply-nested-component-icu.reference.tsx",
      20,
      6,
    ],
    "placeholders": {
      "rank": "rank",
      "role": "role",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "_uwo4-",
    "message": "{rank, selectordinal, =1 {{role, select, admin {two first admin} other {two first other}}} =2 {{role, select, admin {two second admin} other {two second other}}} other {{role, select, admin {two later admin} other {two later other}}}}",
    "origin": [
      "/virtual/trans-with-deeply-nested-component-icu.reference.tsx",
      30,
      6,
    ],
    "placeholders": {
      "rank": "rank",
      "role": "role",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "OsAInm",
    "message": "{rank, selectordinal, =1 {{role, select, admin {many first admin} other {many first other}}} =2 {{role, select, admin {many second admin} other {many second other}}} other {{role, select, admin {many later admin} other {many later other}}}}",
    "origin": [
      "/virtual/trans-with-deeply-nested-component-icu.reference.tsx",
      40,
      6,
    ],
    "placeholders": {
      "rank": "rank",
      "role": "role",
    },
  },
]
`;

exports[`extract fixtures > 'trans-with-deeply-nested-component-icu' > svelte extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "Y5Pnrw",
    "message": "Before <0>{count, plural, =0 {{0}} =2 {{1}} other {{2}}}</0> after.",
    "origin": [
      "/virtual/trans-with-deeply-nested-component-icu.svelte",
      14,
      0,
    ],
    "placeholders": {
      "0": "_i18n._(
    /*i18n*/
    {
      id: "Ro3jDG",
      message: "{rank, selectordinal, =1 {{role, select, admin {zero first admin} other {zero first other}}} =2 {{role, select, admin {zero second admin} other {zero second other}}} other {{role, select, admin {zero later admin} other {zero later other}}}}",
      values: {
        rank: rank,
        role: role
      }
    })",
      "1": "_i18n._(
    /*i18n*/
    {
      id: "_uwo4-",
      message: "{rank, selectordinal, =1 {{role, select, admin {two first admin} other {two first other}}} =2 {{role, select, admin {two second admin} other {two second other}}} other {{role, select, admin {two later admin} other {two later other}}}}",
      values: {
        rank: rank,
        role: role
      }
    })",
      "2": "_i18n._(
    /*i18n*/
    {
      id: "OsAInm",
      message: "{rank, selectordinal, =1 {{role, select, admin {many first admin} other {many first other}}} =2 {{role, select, admin {many second admin} other {many second other}}} other {{role, select, admin {many later admin} other {many later other}}}}",
      values: {
        rank: rank,
        role: role
      }
    })",
      "count": "count",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "Ro3jDG",
    "message": "{rank, selectordinal, =1 {{role, select, admin {zero first admin} other {zero first other}}} =2 {{role, select, admin {zero second admin} other {zero second other}}} other {{role, select, admin {zero later admin} other {zero later other}}}}",
    "origin": [
      "/virtual/trans-with-deeply-nested-component-icu.svelte",
      19,
      10,
    ],
    "placeholders": {
      "rank": "rank",
      "role": "role",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "_uwo4-",
    "message": "{rank, selectordinal, =1 {{role, select, admin {two first admin} other {two first other}}} =2 {{role, select, admin {two second admin} other {two second other}}} other {{role, select, admin {two later admin} other {two later other}}}}",
    "origin": [
      "/virtual/trans-with-deeply-nested-component-icu.svelte",
      33,
      10,
    ],
    "placeholders": {
      "rank": "rank",
      "role": "role",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "OsAInm",
    "message": "{rank, selectordinal, =1 {{role, select, admin {many first admin} other {many first other}}} =2 {{role, select, admin {many second admin} other {many second other}}} other {{role, select, admin {many later admin} other {many later other}}}}",
    "origin": [
      "/virtual/trans-with-deeply-nested-component-icu.svelte",
      47,
      13,
    ],
    "placeholders": {
      "rank": "rank",
      "role": "role",
    },
  },
]
`;

exports[`extract fixtures > 'trans-with-plural' > astro extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "BWlbIC",
    "message": "You have <0>{count, plural, =0 {no unread messages} one {# unread message} other {# unread messages}}</0>.",
    "origin": [
      "/virtual/trans-with-plural.astro",
      7,
      0,
    ],
    "placeholders": {
      "count": "count",
    },
  },
]
`;

exports[`extract fixtures > 'trans-with-plural' > official react extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "BWlbIC",
    "message": "You have <0>{count, plural, =0 {no unread messages} one {# unread message} other {# unread messages}}</0>.",
    "origin": [
      "/virtual/trans-with-plural.reference.tsx",
      9,
      2,
    ],
    "placeholders": {
      "count": "count",
    },
  },
]
`;

exports[`extract fixtures > 'trans-with-plural' > svelte extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "BWlbIC",
    "message": "You have <0>{count, plural, =0 {no unread messages} one {# unread message} other {# unread messages}}</0>.",
    "origin": [
      "/virtual/trans-with-plural.svelte",
      7,
      0,
    ],
    "placeholders": {
      "count": "count",
    },
  },
]
`;

exports[`extract fixtures > 'unicode-adjacent-text' > astro extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "5u37ZP",
    "message": "ようこそ <0>{name}</0> さん🚀",
    "origin": [
      "/virtual/unicode-adjacent-text.astro",
      9,
      2,
    ],
    "placeholders": {
      "name": "name",
    },
  },
]
`;

exports[`extract fixtures > 'unicode-adjacent-text' > official react extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "5u37ZP",
    "message": "ようこそ <0>{name}</0> さん🚀",
    "origin": [
      "/virtual/unicode-adjacent-text.reference.tsx",
      11,
      4,
    ],
    "placeholders": {
      "name": "name",
    },
  },
]
`;

exports[`extract fixtures > 'unicode-adjacent-text' > svelte extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "5u37ZP",
    "message": "ようこそ <0>{name}</0> さん🚀",
    "origin": [
      "/virtual/unicode-adjacent-text.svelte",
      9,
      2,
    ],
    "placeholders": {
      "name": "name",
    },
  },
]
`;

exports[`extract fixtures > 'unicode-zwj-adjacent-text' > astro extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "jlsvLV",
    "message": "家族👨‍👩‍👧‍👦 <0>{name}</0> 終端🚀🎉",
    "origin": [
      "/virtual/unicode-zwj-adjacent-text.astro",
      9,
      2,
    ],
    "placeholders": {
      "name": "name",
    },
  },
]
`;

exports[`extract fixtures > 'unicode-zwj-adjacent-text' > official react extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "jlsvLV",
    "message": "家族👨‍👩‍👧‍👦 <0>{name}</0> 終端🚀🎉",
    "origin": [
      "/virtual/unicode-zwj-adjacent-text.reference.tsx",
      11,
      4,
    ],
    "placeholders": {
      "name": "name",
    },
  },
]
`;

exports[`extract fixtures > 'unicode-zwj-adjacent-text' > svelte extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "jlsvLV",
    "message": "家族👨‍👩‍👧‍👦 <0>{name}</0> 終端🚀🎉",
    "origin": [
      "/virtual/unicode-zwj-adjacent-text.svelte",
      9,
      2,
    ],
    "placeholders": {
      "name": "name",
    },
  },
]
`;

exports[`extract fixtures > 'with-id-context-comment-component' > astro extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/with-id-context-comment-component.astro",
      7,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/with-id-context-comment-component.astro",
      8,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "with-interpolation-with-id",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/with-id-context-comment-component.astro",
      9,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": "This is a context",
    "id": "bVvypv",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/with-id-context-comment-component.astro",
      10,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": "This is a comment",
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/with-id-context-comment-component.astro",
      11,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/with-id-context-comment-component.astro",
      13,
      0,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/with-id-context-comment-component.astro",
      14,
      0,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "no-interpolation-with-id",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/with-id-context-comment-component.astro",
      15,
      0,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": "This is a context",
    "id": "SSpjjA",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/with-id-context-comment-component.astro",
      16,
      0,
    ],
    "placeholders": {},
  },
  {
    "comment": "This is a comment",
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/with-id-context-comment-component.astro",
      17,
      0,
    ],
    "placeholders": {},
  },
]
`;

exports[`extract fixtures > 'with-id-context-comment-component' > official react extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/with-id-context-comment-component.reference.tsx",
      7,
      4,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "with-interpolation-with-id",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/with-id-context-comment-component.reference.tsx",
      16,
      4,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": "This is a context",
    "id": "bVvypv",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/with-id-context-comment-component.reference.tsx",
      25,
      4,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": "This is a comment",
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/with-id-context-comment-component.reference.tsx",
      35,
      4,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/with-id-context-comment-component.reference.tsx",
      46,
      4,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "no-interpolation-with-id",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/with-id-context-comment-component.reference.tsx",
      52,
      4,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": "This is a context",
    "id": "SSpjjA",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/with-id-context-comment-component.reference.tsx",
      58,
      4,
    ],
    "placeholders": {},
  },
  {
    "comment": "This is a comment",
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/with-id-context-comment-component.reference.tsx",
      65,
      4,
    ],
    "placeholders": {},
  },
]
`;

exports[`extract fixtures > 'with-id-context-comment-component' > svelte extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/with-id-context-comment-component.svelte",
      7,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/with-id-context-comment-component.svelte",
      8,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "with-interpolation-with-id",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/with-id-context-comment-component.svelte",
      9,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": "This is a context",
    "id": "bVvypv",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/with-id-context-comment-component.svelte",
      10,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": "This is a comment",
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/with-id-context-comment-component.svelte",
      11,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/with-id-context-comment-component.svelte",
      13,
      0,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/with-id-context-comment-component.svelte",
      14,
      0,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "no-interpolation-with-id",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/with-id-context-comment-component.svelte",
      15,
      0,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": "This is a context",
    "id": "SSpjjA",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/with-id-context-comment-component.svelte",
      16,
      0,
    ],
    "placeholders": {},
  },
  {
    "comment": "This is a comment",
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/with-id-context-comment-component.svelte",
      17,
      0,
    ],
    "placeholders": {},
  },
]
`;

exports[`extract fixtures > 'with-id-context-comment-core' > astro extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/with-id-context-comment-core.astro",
      7,
      13,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/with-id-context-comment-core.astro",
      8,
      15,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "with-interpolation-with-id",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/with-id-context-comment-core.astro",
      11,
      14,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": "This is a context",
    "id": "bVvypv",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/with-id-context-comment-core.astro",
      15,
      14,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": "This is a comment",
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/with-id-context-comment-core.astro",
      19,
      14,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/with-id-context-comment-core.astro",
      24,
      13,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/with-id-context-comment-core.astro",
      25,
      15,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "no-interpolation-with-id",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/with-id-context-comment-core.astro",
      28,
      14,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": "This is a context",
    "id": "SSpjjA",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/with-id-context-comment-core.astro",
      32,
      14,
    ],
    "placeholders": {},
  },
  {
    "comment": "This is a comment",
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/with-id-context-comment-core.astro",
      36,
      14,
    ],
    "placeholders": {},
  },
]
`;

exports[`extract fixtures > 'with-id-context-comment-core' > official core extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/with-id-context-comment-core.reference.ts",
      5,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/with-id-context-comment-core.reference.ts",
      14,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "with-interpolation-with-id",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/with-id-context-comment-core.reference.ts",
      23,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": "This is a context",
    "id": "bVvypv",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/with-id-context-comment-core.reference.ts",
      32,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": "This is a comment",
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/with-id-context-comment-core.reference.ts",
      42,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/with-id-context-comment-core.reference.ts",
      52,
      0,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/with-id-context-comment-core.reference.ts",
      58,
      0,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "no-interpolation-with-id",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/with-id-context-comment-core.reference.ts",
      64,
      0,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": "This is a context",
    "id": "SSpjjA",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/with-id-context-comment-core.reference.ts",
      70,
      0,
    ],
    "placeholders": {},
  },
  {
    "comment": "This is a comment",
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/with-id-context-comment-core.reference.ts",
      77,
      0,
    ],
    "placeholders": {},
  },
]
`;

exports[`extract fixtures > 'with-id-context-comment-core' > svelte extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/with-id-context-comment-core.svelte",
      7,
      14,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/with-id-context-comment-core.svelte",
      8,
      16,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "with-interpolation-with-id",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/with-id-context-comment-core.svelte",
      11,
      15,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": "This is a context",
    "id": "bVvypv",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/with-id-context-comment-core.svelte",
      15,
      15,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": "This is a comment",
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/with-id-context-comment-core.svelte",
      19,
      15,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/with-id-context-comment-core.svelte",
      24,
      14,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/with-id-context-comment-core.svelte",
      25,
      16,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "no-interpolation-with-id",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/with-id-context-comment-core.svelte",
      28,
      15,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": "This is a context",
    "id": "SSpjjA",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/with-id-context-comment-core.svelte",
      32,
      15,
    ],
    "placeholders": {},
  },
  {
    "comment": "This is a comment",
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/with-id-context-comment-core.svelte",
      36,
      15,
    ],
    "placeholders": {},
  },
]
`;
